package src.moduloPago;

public interface Pago {
    boolean pagar(double monto);
}
